Fix formatting of title, description, and tags

--- a/content/ru/blog/people-ai-agents-robots-future-of-work.mdx
+++ b/content/ru/blog/people-ai-agents-robots-future-of-work.mdx
@@ -1,8 +1,10 @@
 ---
-title: "Люди, ИИ-агенты и роботы: как меняется структура труда"
-description: "Более половины рабочего времени уже сегодня может быть автоматизировано. Почему ИИ-агенты становятся ключевым элементом экономики будущего — и где роль человека остаётся незаменимой."
+title: 'Люди, ИИ-агенты и роботы: как меняется структура труда'
+description: 'Более половины рабочего времени уже сегодня может быть автоматизировано. Почему ИИ-агенты становятся ключевым элементом экономики будущего — и где роль человека остаётся незаменимой.'
 date: 2026-01-18
-tags: ["AI", "ИИ-агенты", "автоматизация", "будущее труда", "роботы"]
+tags: ['AI', 'ИИ-агенты', 'автоматизация', 'будущее труда', 'роботы']
+authors: ['slavb18']
+language: 'ru'
 ---
 
 ## Более половины работы — под автоматизацию
